fix: Restore simple coverage mapping logic
- Revert complex coverage key building to original simple format
- Restore 2-stage lookup: full key -> short key
- Remove over-complex fully-qualified name logic that broke functionality
- Restore original debug logging format
- Focus on core functionality rather than complex edge cases

This should restore package name visibility and basic coverage mapping.